fix wording + company h1 alignement

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -394,6 +394,10 @@ header {
     #company {
 
 
+       h1 {
+        text-align: left;
+       }
+
        #qualityIllustration {
         margin-right: 82px;
        }
